objects/Vendor_Engagement__c.object
<CustomObject>
    <fields>
        <fullName>Auction__c</fullName>
        <formula>Ops_Case__r.Auction_Number_Case__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billable_Party__c</fullName>
        <label>Billable Party</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACV</fullName>
                </value>
                <value>
                    <fullName>Buyer</fullName>
                </value>
                <value>
                    <fullName>Seller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Notes__c</fullName>
        <label>Billing Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Time_of_Approved_Denied_Status__c</fullName>
        <label>Date/Time of Approved/Denied Status</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_of_Received_Status__c</fullName>
        <label>Date/Time of Received Status</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_of_Working_Status__c</fullName>
        <label>Date/Time of Working Status</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Details_of_Vendor_Engagement__c</fullName>
        <label>Details of Vendor Engagement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ops_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ops Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Vendor Engagements</relationshipLabel>
        <relationshipName>Vendors_Engagement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PO Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Needed__c</fullName>
        <label>Services Needed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Lien Release</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                    <default>true</default>
                    <label>Submitted</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_to_Approved_Denied__c</fullName>
        <formula>Date_Time_of_Approved_Denied_Status__c  -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitted to Approved/Denied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submitted_to_Working__c</fullName>
        <formula>Date_Time_of_Working_Status__c  -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitted to Working</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Turnaround_Time__c</fullName>
        <formula>Date_Time_of_Received_Status__c  -  Date_Time_of_Working_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Turnaround Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Engagements</relationshipLabel>
        <relationshipName>Vendors_Engagement</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vendor Engagement</label>
    <nameField>
        <displayFormat>VE-{0000}</displayFormat>
        <label>Vendor Engagement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Engagements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>